# zngconv

./: .gitignore  CMakeLists.txt  README.md  args.cmake  args.ggo  genargs.bat  icon.pdn  setup.bat  setup.sh
libs/: lz4.cmake  stb.cmake
source/: args.c  args.h  main.cpp
